# Simple-Notes-API

./: Cargo.toml  README.md
migrations/2021-03-25-125204_notes/: down.sql  up.sql
src/: database.rs  main.rs  models.rs  schema.rs
