[package]
name = "notes_api"
version = "0.1.0"
authors = ["Utkarsh Patel <utkarshhpatel13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = { version = "0.4.7", features=["json"]}
serde = {version="*", features = ["derive"]}
diesel = { version = "1.4.4", features = ["mysql", "chrono", "r2d2"] }
diesel_codegen = { version = "*", features = ["mysql"] }
r2d2 = "*"
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15.0"
